deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admission-webhook
  namespace: webhook
  labels:
    app: webhook
    service: admission-webhook
spec:
  selector:
    app: webhook
    service: admission-webhook
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8080
