deploy/webhook-admission-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: admission-webhook
  labels:
    app: webhook
    service: admission-webhook
webhooks:
  - name: admission-webhook.webhook.com
    clientConfig:
      # url: "https://admission-webhook.webhook.svc.cluster.local/inject-init-container"
      service:
        name: admission-webhook
        namespace: webhook
        path: "/inject-init-container"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVEekNDQXZlZ0F3SUJBZ0lVT2pnMnVKY1oyalY1T25NOTIrcTNxWUMrUGFNd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1dqRUxNQWtHQTFVRUJoTUNTVTR4RHpBTkJnTlZCQWdNQmt0bGNtRnNZVEVPTUF3R0ExVUVCd3dGUzI5agphR2t4RlRBVEJnTlZCQW9NREVkaGJXRmpiMjF0TG1OdmJURVRNQkVHQTFVRUF3d0tkMlZpYUc5dmExOWpZVEFnCkZ3MHlNREE1TXpBeE5EQTVNek5hR0E4eU1qazBNRGN4TmpFME1Ea3pNMW93V2pFTE1Ba0dBMVVFQmhNQ1NVNHgKRHpBTkJnTlZCQWdNQmt0bGNtRnNZVEVPTUF3R0ExVUVCd3dGUzI5amFHa3hGVEFUQmdOVkJBb01ERWRoYldGagpiMjF0TG1OdmJU [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: ["*"]
        apiVersions: ["v1"]
        resources: ["pods"]
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
